--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,11 @@
             <button type="submit" class="btn btn-primary" ng-disabled="loading">{{ submitButtonText }}</button>
             {% endraw %}
           </form>
+          <div class="alert alert-danger" role="alert" ng-show='urlError'>
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            <span class="sr-only">Error:</span>
+            There was an error submitting your URL. Please check to make sure it is valid before trying again.
+          </div>
         </div>
         <div class="col-sm-5 col-sm-offset-1">
           <h2>Frequencies</h2>
@@ -37,15 +42,18 @@
                 </tr>
               </thead>
               <tbody>
-                <tr ng-repeat="(key, val) in wordcounts">
-                  {% raw %}
-                  <td>{{key}}</td>
-                  <td>{{val}}</td>
-                  {% endraw %}
-                </tr>
+                {% raw %}
+                  <tr ng-repeat="(key, val) in wordcounts">
+                  
+                    <td>{{key}}</td>
+                    <td>{{val}}</td>
+                
+                  </tr>
+                {% endraw %}
               </tbody>
             </table>
           </div>
+          <img class="col-sm-3 col-sm-offset-4" src="{{ url_for('static', filename='spinner.gif') }}" ng-show="loading">
         </div>
       </div>
     </div>
